Changes:   - Openapi description to match updated routes   - Remove on teacher from office to return no-content   - Remove student from class route from delete to remove   - TeacherOfficeResponse to include more useful and non-database only information
