# src/main/kotlin/api/model/response/TeacherOfficeResponse.kt
@@ -5,12 +5,20 @@ import kotlinx.serialization.Serializable
 
 @Serializable
 data class TeacherOfficeResponse(
-    val teacher: Teacher
+    val id: Int,
+    val email: String,
+    val username: String,
+    val officeId: Int,
+    val officeRoom: String
 ){
     companion object {
         fun from(teacher:Teacher): TeacherOfficeResponse{
             return TeacherOfficeResponse(
-                teacher = teacher
+                teacher.user.id,
+                teacher.user.email,
+                teacher.user.username,
+                teacher.office?.room?.id ?: 0,
+                teacher.office?.room?.name ?: ""
             )
         }
     }
